--- a/slider/index.html
+++ b/slider/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="pl_PL">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Slider</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/222bcdf81a.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+
+    <div class="slider">
+
+        <div class="slide" style="background-image: url('slide1.jpg');">
+            <div class="overlay"></div>
+            <div class="slideText">
+                <div class="slideTitle">Pierwszy tytuł</div>
+                <div class="slideDescription">Krótki opis dotyczący pierwszego obrazka</div>
+            </div>
+        </div>
+
+        
+
+        <div class="prev">
+            <i class="fas fa-arrow-left"></i>
+        </div>
+
+        <div class="next">
+            <i class="fas fa-arrow-right"></i>
+        </div>
+
+        <div class="dots">
     
+        </div>
+
+
+    </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
